# seidrum

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agents/: code-review-agent.yaml  personal-assistant.yaml  proactive-monitor.yaml  research-agent.yaml
config/: platform.yaml  plugins.yaml
config/presets/: api-service.yaml  chat-bot.yaml  developer.yaml
config/presets/examples/: README.md  email-assistant.yaml
crates/core/seidrum-common/: Cargo.toml
crates/core/seidrum-common/src/: bus_client.rs  config.rs  events.rs  lib.rs  ws_client.rs
crates/core/seidrum-common/tests/: bus_client_inprocess.rs  ws_client_e2e.rs
crates/core/seidrum-daemon/: Cargo.toml
crates/core/seidrum-daemon/src/: cli.rs  config.rs  daemon.rs  infra.rs  main.rs  paths.rs  setup.rs  status.rs
crates/core/seidrum-daemon/src/pkg/: download.rs  install.rs  list.rs  mod.rs  publish.rs  registry.rs  resolve.rs  search.rs  uninstall.rs  verify.rs
crates/core/seidrum-e2e/: Cargo.toml
crates/core/seidrum-e2e/tests/: builtin_capabilities.rs  capability.rs  conversation_crud.rs  plugin_lifecycle.rs  skill_crud.rs  storage.rs
crates/core/seidrum-e2e/tests/common/: mod.rs
crates/core/seidrum-eventbus/: ARCHITECTURE.md  AUDIT.md  Cargo.toml  IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_MIGRATION.md  PHASE5_STEP3_PLAN.md  PLAN.md  PROJECT.md  QUALITY.md
crates/core/seidrum-eventbus/examples/: custom_channel.rs  encryption_interceptor.rs  rate_limiter.rs  scope_tagger.rs
crates/core/seidrum-eventbus/src/: builder.rs  bus.rs  lib.rs  request_reply.rs
crates/core/seidrum-eventbus/src/delivery/: in_process.rs  mod.rs  registry.rs  retry.rs  webhook.rs  webhook_interceptor.rs  websocket.rs  ws_remote.rs  ws_remote_interceptor.rs
crates/core/seidrum-eventbus/src/dispatch/: engine.rs  filter.rs  interceptor.rs  mod.rs  subject_index.rs  ws_remote_interceptor.rs
crates/core/seidrum-eventbus/src/storage/: compaction.rs  memory_store.rs  mod.rs  redb_store.rs  types.rs
crates/core/seidrum-eventbus/src/transport/: http.rs  mod.rs  ws.rs
crates/core/seidrum-eventbus/tests/: integration_tests.rs  phase4_transport.rs  phase5_retry.rs
crates/core/seidrum-kernel/: Cargo.toml  Dockerfile
crates/plugins/seidrum-api-gateway/: Cargo.toml
crates/plugins/seidrum-api-gateway/src/: audit.rs  auth.rs  connections.rs  dashboard.rs  event_stream.rs  jwt.rs  lib.rs  main.rs  protocol.rs  rate_limiter.rs  rest.rs  ws.rs
crates/plugins/seidrum-api-gateway/static/: app.js  index.html  style.css
crates/plugins/seidrum-api-gateway/tests/: integration_tests.rs
crates/plugins/seidrum-calendar/: Cargo.toml  Dockerfile
crates/plugins/seidrum-claude-code/: Cargo.toml
crates/plugins/seidrum-cli/: Cargo.toml  Dockerfile
crates/plugins/seidrum-cli/src/: main.rs
crates/plugins/seidrum-code-executor/: Cargo.toml  Dockerfile
crates/plugins/seidrum-content-ingester/: Cargo.toml  Dockerfile
crates/plugins/seidrum-email/: Cargo.toml  Dockerfile
crates/plugins/seidrum-email/src/: main.rs
crates/plugins/seidrum-entity-extractor/: Cargo.toml  Dockerfile
crates/plugins/seidrum-entity-extractor/src/: main.rs
crates/plugins/seidrum-llm-google/: Cargo.toml  Dockerfile
crates/plugins/seidrum-llm-google/src/: gemini_types.rs  main.rs  translator.rs
crates/plugins/seidrum-llm-router/: Cargo.toml  Dockerfile
crates/plugins/seidrum-llm-router/src/: context_assembly.rs  main.rs  routing.rs  tools.rs
crates/plugins/seidrum-notification/: Cargo.toml  Dockerfile
crates/plugins/seidrum-notification/src/: main.rs
crates/plugins/seidrum-telegram/: Cargo.toml  Dockerfile
crates/plugins/seidrum-telegram/src/: commands.rs  inbound.rs  main.rs  markdown.rs  media.rs  outbound.rs  split.rs  voice.rs
crates/plugins/seidrum-tool-dispatcher/: Cargo.toml  Dockerfile
crates/plugins/seidrum-tool-dispatcher/src/: main.rs
crates/seidrum-common/: Cargo.toml
crates/seidrum-common/src/: config.rs  events.rs  lib.rs  nats_utils.rs
crates/seidrum-daemon/: Cargo.toml
crates/seidrum-daemon/src/: cli.rs  config.rs  daemon.rs  infra.rs  install.rs  main.rs  paths.rs  setup.rs  status.rs
crates/seidrum-e2e/: Cargo.toml
crates/seidrum-e2e/tests/: builtin_capabilities.rs  capability.rs  conversation_crud.rs  plugin_lifecycle.rs  skill_crud.rs  storage.rs
crates/seidrum-e2e/tests/common/: mod.rs
crates/seidrum-kernel/: Cargo.toml
crates/seidrum-kernel/src/: main.rs
crates/seidrum-kernel/src/brain/: client.rs  init.rs  mod.rs  service.rs
crates/seidrum-kernel/src/consciousness/: builtin_capabilities.rs  guardrails.rs  mod.rs  service.rs
crates/seidrum-kernel/src/embedding/: mod.rs  service.rs  skill_loader.rs
crates/seidrum-kernel/src/orchestrator/: mod.rs  service.rs
crates/seidrum-kernel/src/plugin_storage/: service.rs
crates/seidrum-kernel/src/registry/: mod.rs  service.rs
crates/seidrum-kernel/src/scheduler/: mod.rs  service.rs
crates/seidrum-kernel/src/scope/: mod.rs  service.rs
crates/seidrum-kernel/src/tool_registry/: service.rs
crates/seidrum-kernel/src/trace_collector/: service.rs
docs/: ADR_EVOLUTION.md  AGENT_CONSCIOUSNESS.md  AGENT_SKILLS.md  AGENT_SPEC.md  ARCHITECTURE.md  BRAIN_SCHEMA.md  EVENT_CATALOG.md  GETTING_STARTED.md  INTERCEPTOR_PATTERNS.md  LLM_INTEGRATION.md  PLUGIN_AUTHOR_GUIDE.md  PLUGIN_SPEC.md  PRESET_BUNDLES.md  PROJECT.md  SECURITY.md  TECH_STACK.md
prompts/: assistant.md  code-review.md  proactive.md  research.md  system.md
registry/: README.md  index.yaml
registry/examples/: seidrum-pkg-agent.yaml  seidrum-pkg-bundle.yaml  seidrum-pkg-plugin.yaml
scripts/: setup.sh
skills/: code-review.yaml  daily-digest.yaml  incident-response.yaml  pattern-detection.yaml  task-followup.yaml
uploads/seidrum-specs/: AGENT_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  BRAIN_SCHEMA.md  BUILD_PLAN.md  EVENT_CATALOG.md  INDEX.md  LLM_INTEGRATION.md  PLUGIN_SPEC.md
workflows/: default.yaml
(+71 files in other folders)
