[workspace]
members = [
    "crates/seidrum-common",
    "crates/seidrum-kernel",
    "crates/plugins/seidrum-cli",
    "crates/plugins/seidrum-llm-router",
    "crates/plugins/seidrum-response-formatter",
    "crates/plugins/seidrum-content-ingester",
    "crates/plugins/seidrum-telegram",
    "crates/plugins/seidrum-entity-extractor",
    "crates/plugins/seidrum-graph-context-loader",
]
resolver = "2"
