[workspace]
members = [
    "crates/seidrum-common",
    "crates/seidrum-kernel",
    "crates/plugins/seidrum-cli",
    "crates/plugins/seidrum-llm-router",
    "crates/plugins/seidrum-response-formatter",
    "crates/plugins/seidrum-content-ingester",
    "crates/plugins/seidrum-telegram",
    "crates/plugins/seidrum-entity-extractor",
    "crates/plugins/seidrum-graph-context-loader",
    "crates/plugins/seidrum-fact-extractor",
    "crates/plugins/seidrum-task-detector",
    "crates/plugins/seidrum-scope-classifier",
    "crates/plugins/seidrum-event-emitter",
    "crates/plugins/seidrum-code-executor",
    "crates/plugins/seidrum-notification",
    "crates/plugins/seidrum-email",
    "crates/plugins/seidrum-calendar",
    "crates/plugins/seidrum-tool-dispatcher",
    "crates/plugins/seidrum-llm-google",
]
resolver = "2"
