[workspace]
members = [
    "crates/core/seidrum-common",
    "crates/core/seidrum-kernel",
    "crates/core/seidrum-daemon",
    "crates/core/seidrum-e2e",
    "crates/plugins/seidrum-cli",
    "crates/plugins/seidrum-llm-router",
    "crates/plugins/seidrum-response-formatter",
    "crates/plugins/seidrum-content-ingester",
    "crates/plugins/seidrum-telegram",
    "crates/plugins/seidrum-entity-extractor",
    "crates/plugins/seidrum-graph-context-loader",
    "crates/plugins/seidrum-fact-extractor",
    "crates/plugins/seidrum-task-detector",
    "crates/plugins/seidrum-scope-classifier",
    "crates/plugins/seidrum-event-emitter",
    "crates/plugins/seidrum-code-executor",
    "crates/plugins/seidrum-notification",
    "crates/plugins/seidrum-email",
    "crates/plugins/seidrum-calendar",
    "crates/plugins/seidrum-tool-dispatcher",
    "crates/plugins/seidrum-llm-google",
    "crates/plugins/seidrum-llm-openai",
    "crates/plugins/seidrum-llm-anthropic",
    "crates/plugins/seidrum-llm-ollama",
    "crates/plugins/seidrum-claude-code",
    "crates/plugins/seidrum-api-gateway",
    "crates/plugins/seidrum-feedback-extractor",
]
resolver = "2"
