[package]
name = "seidrum-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
libc = "0.2"
