[package]
name = "seidrum-common"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
seidrum-eventbus = { path = "../seidrum-eventbus", features = ["test-utils"] }

[dependencies]
base64 = "0.22"
seidrum-eventbus = { path = "../seidrum-eventbus" }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
tokio-tungstenite = "0.26"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
