[package]
name = "seidrum-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
dialoguer = "0.11"
zip = "2"
rand = "0.8"
indicatif = "0.17"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
async-nats = "0.35"
futures = "0.3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
