[package]
name = "seidrum-e2e"
version = "0.1.0"
edition = "2021"
publish = false

# No lib or bin — this crate only contains integration tests.

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
seidrum-common = { path = "../seidrum-common" }
