[package]
name = "seidrum-eventbus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"
ulid = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros"] }
