[package]
name = "seidrum-eventbus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
ulid = "1"
axum = "0.8"
tokio-tungstenite = "0.26"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros"] }
