[package]
name = "seidrum-api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum-api-gateway"
path = "src/main.rs"

[dependencies]
seidrum-common = { path = "../../seidrum-common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
futures = "0.3"
dashmap = "6"
ulid = "1"
jsonschema = "0.28"
rust-embed = "8"
mime_guess = "2"
