[package]
name = "seidrum-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum-cli"
path = "src/main.rs"

[dependencies]
seidrum-common = { path = "../../core/seidrum-common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures = "0.3"
