[package]
name = "seidrum-email"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum-email"
path = "src/main.rs"

[dependencies]
seidrum-common = { path = "../../seidrum-common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-imap = "0.10"
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"
