[package]
name = "seidrum-entity-extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum-entity-extractor"
path = "src/main.rs"

[dependencies]
seidrum-common = { path = "../../seidrum-common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
