[package]
name = "seidrum-llm-router"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum-llm-router"
path = "src/main.rs"

[dependencies]
seidrum-common = { path = "../../seidrum-common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
