[package]
name = "seidrum-tool-dispatcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seidrum-tool-dispatcher"
path = "src/main.rs"

[dependencies]
seidrum-common = { path = "../../core/seidrum-common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures = "0.3"
